blocks/profile.css
.profile {
  display: flex;
  align-items: center;
  padding-top: 40px;
  max-width: 880px;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 51px;
}
.profile__info {
  display: grid;
  grid-template-areas:
    "title button"
    "description description";
  grid-template-columns: minmax(auto, 373px) auto;
  grid-gap: 9px 17px;
  max-width: 415px;
  align-items: center;
}
.profile__edit-button {
  background: transparent url(../images/edit_button.svg) center no-repeat;
  height: 24px;
  width: 24px;
  grid-area: button;
  margin-top: 15px;
  margin-right: auto;
  border: solid white 1px;
  cursor: pointer;
  align-self: center;
}
.profile__edit-button:hover {
  opacity: 0.6;
}
.profile__add-button {
  background: transparent url(../images/add-icon.svg) center no-repeat;
  width: 150px;
  height: 50px;
  border-radius: 2px;
  border: solid white 2px;
  margin-left: auto;
  cursor: pointer;
}
.profile__add-button:hover {
  opacity: 0.6;
}
.profile__title {
  font-size: 42px;
  line-height: 48px;
  font-weight: 500;
  grid-area: title;
  max-width: 373px;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin: 0;
  margin-top: 15px;
}
.profile__description {
  font-size: 18px;
  line-height: 22px;
  font-weight: 400;
  grid-area: description;
  margin: 0;
  max-width: 415px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  align-items: center;
}
.profile__image {
  height: 120px;
  width: 120px;
  border-radius: 50%;
  object-fit: cover;
  background-position: center;
  margin-right: 24px;
}

@media screen and (max-width: 800px) {
  .profile {
    max-width: 750px;
  }
  .profile__title {
    font-size: 35px;
    line-height: 50px;
    margin-bottom: 0;
  }
  .profile__info {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
  }
  .profile__description {
    margin: 0;
    margin-right: auto;
  }
}
@media screen and (max-width: 650px) {
  .profile {
    max-width: 600px;
  }
  .profile__title {
    font-size: 30px;
  }
  .profile__description {
    font-size: 15px;
  }
  .profile__add-button {
    width: 200px;
  }
}
@media screen and (max-width: 590px) {
  .profile {
    flex-direction: column;
    max-width: 282px;
  }
  .profile__title {
    width: 196px;
    font-size: 22px;
    margin-left: 43px;
    line-height: 21px;
  }
  .profile__image {
    margin-left: 19px;
  }
  .profile__description {
    text-align: center;
    font-size: 14px;
    margin-left: auto;
  }
  .profile__add-button {
    margin: 0;
    margin-top: 36px;
    padding: 0;
    width: 100%;
  }
  .profile__edit-button {
    width: 18px;
    height: 18px;
  }
}

@media screen and (max-width: 320px) {
  .profile {
    margin-bottom: 36px;
  }
  .profile__title {
    line-height: 27px;
    margin-top: 30px;
  }
  .profile__description {
    margin-top: 14px;
  }
  .profile__info {
    justify-content: flex-start;
  }
  .profile__edit-button {
    margin-top: 34px;
  }
}

